--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   intl: ^0.19.0
   gap: ^3.0.1
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
