--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   intl: ^0.19.0
   gap: ^3.0.1
   equatable: ^2.0.5
-  provider: ^6.1.1
+  flutter_hooks: ^0.20.4
 
 dev_dependencies:
   flutter_test:
