--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,12 +15,15 @@ dependencies:
   gap: ^3.0.1
   equatable: ^2.0.5
   flutter_hooks: ^0.20.4
+  hooks_riverpod: ^2.4.9
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^3.0.1
+  custom_lint: ^0.5.8
+  riverpod_lint: ^2.3.7
 
 
 flutter:
